--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.16.16",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
