--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
