--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.19",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
