--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
